3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Adding the minor, medium and major Potions of Life to the treasure list so
they can be found in shops, dungeons, et al.
--
server/branches/1.x/lib/treasures
--
RJT 2007-09-26

Renamed "potion of invulnerability" to "potion of shielding." Hopefully this will
remove player confusion as to why one takes damage from all attack types (except
physical) when drinking this potion.
--
arch/trunk/potion/potioninv.arc
maps/trunk/pup_land/begin/adv
server/trunk/lib/treasures
---
RJT 2007-09-26

Add support for periodic updating of hiscore information for players - fixes
bug 1735262.  Main change was to modify check_score() to take a flag that
determines if messages related to high score placement should be displayed
or not.
--
include/sproto.h: Rebuilt because of change to check_score()
server/apply.c: Change calls to check_score() to take quiet flag.
server/c_wiz.c: Change calls to check_score() to take quiet flag.
server/hiscore.c: Modify check_score to take quiet flag, update function
  not to print messages if it is set.
server/login.c: Change calls to check_score() to take quiet flag.
server/player.c: Change calls to check_score() to take quiet flag.
server/server.c: Add calls to check_score() when doing autosaves as well
  as when player connection is unexpected terminated.
--
MSW 2007-09-25

Always destroy projectiles having no_drop when they stop being a
projectile. This prevents arrows and weapons fired from summoned monsters
to stick to the ground/into the victim's inventory.
--
common/objects.c: Remove static modifier from free_object2().
server/attack.c: In hit_with_arrow() destroy no_drop arrows.